--- a/about/index.html
+++ b/about/index.html
@@ -16,9 +16,9 @@
     </style>
 
     <!-- Shared CSS Files -->
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/buttons.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
 
     <!-- Page-Specific CSS Files -->
     <link rel="stylesheet" href="about.css">
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="experience.css">
 
     <!-- Responsive and Special CSS -->
-    <link rel="stylesheet" href="../css/responsive-unified.css">
-    <link rel="stylesheet" href="../css/specials.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 </head>
 
 <body>
@@ -137,60 +137,7 @@
         <div class="bento-item experience">
             <h2 class="section-title">Experience</h2>
             <div class="experience-container">
-                <!-- Most recent experience first in DOM for mobile -->
-                <div class="organization-group">
-                    <div class="experience-where">Gradient Club (The AIML Student Club at BMSCE)</div>
-
-                    <div class="role-container">
-                        <div class="experience-role">Tech Head</div>
-                        <div class="experience-duration">Jan 2025 - Present</div>
-                        <div class="experience-about">
-                            <ul>
-                                As the Head of the Tech team I mentored junior members and managed technical aspects of
-                                events.
-                                <br>
-                                • Event Coordinator, <strong>Uncharted: Lost Voyage</strong> at Utsav '25.<br>
-                                • Managing the club <strong>Linkedin</strong> page since 13th April, 2025.<br>
-                                • Assisted with sponsorhip during <strong>Gradient Week '25</strong>.<br>
-                                • Event Coordinator, <strong>Parallel Fusion</strong> during Gradient Week '25.<br>
-                                • Built the club website : <a href="https://gradientaiml.tech">GradientAIML.tech</a>
-                                <br>
-
-                            </ul>
-                        </div>
-
-                    </div>
-
-                    <div class="role-container">
-                        <div class="experience-role">Tech Team Member</div>
-                        <div class="experience-duration">Feb 2024 - Jan 2025</div>
-                        <div class="experience-about">
-                            <ul>
-                                • Event Coordinator, <strong>Maze Maniac Resurrected</strong> during Phasheshift '24
-                                <br>
-                                • Event Coordinator, <strong>Evengers : Auction Wars</strong> during PES week '24 <br>
-                                • Volunteer, <strong>Uncharted 2.0</strong> during Utsav '24 <br>
-                                • Volunteer, <strong>Gradient Week</strong> '24 <br>
-                                • Volunteer, <strong>Maze Maniac 2.0</strong> during Phasheshift '23 <br>
-                            </ul>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="organization-group">
-                    <div class="experience-where">Beyond Me Btw</div>
-
-                    <div class="role-container">
-                        <div class="experience-role">Blog Writer & Creator</div>
-                        <div class="experience-duration">September 2022 - Present</div>
-                        <div class="experience-about">
-                            Creating engaging content about technology, F1 and Movies/Tv Shows.
-                            Developing tutorials and guides on various tech concepts.
-                            Sharing personal experiences and lessons learned through storytelling.
-                        </div>
-                    </div>
-                </div>
+                <!-- Experience will be dynamically rendered by JavaScript -->
             </div>
         </div>
 
@@ -201,88 +148,7 @@
                 projects such as:</p>
 
             <div class="skills-container">
-
-                <div class="skill-category">
-                    <h3 class="skill-category-title">Software Development</h3>
-
-                    <div class="skill-subcategories">
-                        <!-- Web Development -->
-                        <div class="skill-subcategory">
-                            <h4 class="skill-subcategory-title">Web Development</h4>
-                            <div class="skill-tags-container">
-                                <div class="skill-tag">HTML/CSS</div>
-                                <div class="skill-tag">JavaScript</div>
-                                <div class="skill-tag">React</div>
-                                <div class="skill-tag">Next.js</div>
-                                <div class="skill-tag">Anime.js</div>
-                                <div class="skill-tag">Node.js</div>
-                                <div class="skill-tag">Vue.js</div>
-                                <div class="skill-tag">Nginx</div>
-                                <div class="skill-tag">Tailwind CSS</div>
-                                <div class="skill-tag">Vercel</div>
-                                <div class="skill-tag">Flask</div>
-                            </div>
-                        </div>
-
-                        <!-- Artifical Intelligence & Machine Learning -->
-                        <div class="skill-subcategory">
-                            <h4 class="skill-subcategory-title">Artifical Intelligence & Machine Learning</h4>
-                            <div class="skill-tags-container">
-                                <div class="skill-tag">Tensorflow</div>
-                                <div class="skill-tag">OpenCV</div>
-                                <div class="skill-tag">Pandas</div>
-                                <div class="skill-tag">DepthAI</div>
-                                <div class="skill-tag">PyTorch</div>
-                                <div class="skill-tag">SciKit-Learn</div>
-                            </div>
-                        </div>
-
-                        <!-- General Programming -->
-                        <div class="skill-subcategory">
-                            <h4 class="skill-subcategory-title">General Programming</h4>
-                            <div class="skill-tags-container">
-                                <div class="skill-tag">Python</div>
-                                <div class="skill-tag">JavaScript</div>
-                                <div class="skill-tag">Java</div>
-                                <div class="skill-tag">C/C++</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Combined Application Description -->
-                    <div class="skill-application">
-                        Used to create responsive and interactive websites (e.g., this personal portfolio), build
-                        machine learning pipelines for image analysis and prediction, and implement backend logic and
-                        scripting for various tools and applications.
-                    </div>
-                </div>
-
-                <div class="skill-category">
-                    <h3 class="skill-category-title">Design & Content</h3>
-                    <div class="skill-tags-container">
-                        <div class="skill-tag">Design and Content</div>
-                        <div class="skill-tag">Content Writing</div>
-                        <div class="skill-tag">Graphic Design</div>
-                        <div class="skill-tag">Video Editing</div>
-                        <div class="skill-tag">Content Creation</div>
-                        <div class="skill-tag">Digital Marketing</div>
-                    </div>
-                    <div class="skill-application">Applied to improve user experience in various projects along with
-                        design posters and promotional materials.</div>
-                </div>
-
-                <div class="skill-category">
-                    <h3 class="skill-category-title">Professional</h3>
-                    <div class="skill-tags-container">
-                        <div class="skill-tag">Project Management</div>
-                        <div class="skill-tag">Event Management</div>
-                        <div class="skill-tag">Public Speaking</div>
-                        <div class="skill-tag">Sponsorship</div>
-                    </div>
-                    <div class="skill-application">Coordinated events and projects, ensuring smooth execution and
-                        stakeholder engagement.</div>
-                </div>
-
+                <!-- Skills will be dynamically rendered by JavaScript -->
             </div>
         </div>
 
@@ -312,7 +178,7 @@
         </div>
     </div>
 
-    <script src="about.js"></script>
+    <script type="module" src="about.js"></script>
 </body>
 
 </html>
