--- a/projects/index.html
+++ b/projects/index.html
@@ -16,17 +16,17 @@
     </style>
 
     <!-- Shared CSS Files -->
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/buttons.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/base.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/header.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/buttons.css">
 
     <!-- Page-Specific CSS Files -->
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="projgrid.css">
 
     <!-- Responsive and Special CSS -->
-    <link rel="stylesheet" href="../css/responsive-unified.css">
-    <link rel="stylesheet" href="../css/specials.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
