--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,8 @@
 
     <!-- Page-Specific CSS Files -->
     <link rel="stylesheet" href="projects.css">
-    <link rel="stylesheet" href="projgrid.css">
+    <link rel="stylesheet" href="projgrid-normal.css">
+    <link rel="stylesheet" href="projgrid-sidebar.css">
 
     <!-- Responsive and Special CSS -->
     <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive-unified.css">
